check_out3.txt
    Checking rh-cql v0.1.0 (/Users/bkaney/projects/rh/crates/rh-cql)
error[E0609]: no field `enable_annotations` on type `CompilerOptions`
  --> crates/rh-cql/src/emit/mod.rs:29:26
   |
29 |         if self._options.enable_annotations {
   |                          ^^^^^^^^^^^^^^^^^^ unknown field
   |
   = note: available fields are: `options`, `validate_units`, `verify_only`, `enable_cql_only`, `compatibility_level` ... and 4 others

error[E0308]: mismatched types
  --> crates/rh-cql/src/emit/mod.rs:33:16
   |
33 |         if let Some(r#type) = &node.data_type {
   |                ^^^^^^^^^^^^   --------------- this expression has type `&DataType`
   |                |
   |                expected `DataType`, found `Option<_>`
   |
   = note: expected enum `DataType`
              found enum `std::option::Option<_>`

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `rh-cql` (lib) due to 2 previous errors
